--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,7 +7,7 @@ body {
 }
 
 section {
-  @apply min-h-screen max-h-[2160px] px-10 md:px-20 py-20 flex justify-between items-center;
+  @apply min-h-screen px-10 md:px-20 py-20 flex justify-between items-center;
 }
 
 .PARALLAXBG,
